# nexus

./: .editorconfig  .gitignore  Cargo.toml  README.md  Taskfile.yml  go.mod  go.sum  go.work  go.work.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json
.github/: dependabot.yml
.storybook/: main.ts  preview.tsx
app/: Cargo.toml
app/backup_server/: go.mod  go.sum  main.go
app/backup_server/cmd/: root.go
app/backup_server/internal/server/: module.go
app/cli/: go.mod  main.go
app/cli/cmd/: rootCmd.go
app/server/: Taskfile.yml  go.mod  go.sum  main.go
app/server/cmd/: container.go
app/server/internal/auth/: module.go
app/server/internal/bucket/: bucket.go  bucket_service.go  module.go  new_bucket_service.go
app/server/internal/buffer/: upload_buffer.go
app/server/internal/config/: module.go
app/server/internal/controller/: namespace_controller.go  namespace_create_request.go  new_namespace_controller.go  upload_controller.go  view_controller.go
app/server/internal/entry/: module.go
app/server/internal/entry/http/: controller.go
app/server/internal/entry/http/endpoint/: namespace_controller.go  new_namespace_controller.go  upload_controller.go  view_controller.go  webdav_controller.go
app/server/internal/entry/tcp/: server.go
app/server/internal/http/: controller.go  lifecycle.go
app/server/internal/internal_store/: bblot_zap_logger.go  lifecycle.go  metadata.go  module.go
app/server/internal/protocol/: module.go
app/server/internal/protocol/http/: controller.go  module.go
app/server/internal/protocol/http/endpoint/: namespace_create_request.go  response.go
app/server/internal/protocol/tcp/: lifecycle.go  module.go  protocol.go
app/server/internal/stash/: module.go
app/server/internal/storage/: chunk_storage.go  module.go
app/server/internal/tcp/: lifecycle.go
app/server/internal/worker/: module.go
app/server/view/: index.html
app/src/: app_module.rs  cli.rs  config.rs  main.rs
backup-server/: go.mod
backup_server/: go.mod  main.go
badger_bucket/: bucket.go  cbor_bucket_test.go  go.mod  go.sum  gob.go  json_bucket.go  serialize_bucket.go
cli/: go.mod  main.go
cmd/: root.go
core/: Cargo.toml
deploy/: nexus.service
docs/: book.toml
entries/http_entry/: Cargo.toml
entries/http_entry/src/: http_service.rs  lib.rs  upload.rs
gnet_zap_logger/: go.mod
ioutil/: go.mod
server/: Taskfile.yml  go.mod  go.sum  main.go
src/: app_state.rs  main.rs
stories/: Button.tsx  FileManager.stories.tsx
translate/: embed.go  (+2 more)
(+298 files in other folders)
