[package]
name = "storix"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "2.5.0"
tantivy = "0.24.1"
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.17"
metrics-exporter-prometheus = "0.9"
blake3 = "1.8.2"
anyhow = "1.0"
bincode = "2.0.1"
async-trait = "0.1.88"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3"