[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["core", 'entries/entry', "entries/http_entry", "entries/tcp_entry", "indexer/indexer", "indexer/tantivy_indexer", "metadata/metadata_redb_storer", "metadata/metadata_storer", "app", "storage/storage-chunked", "storage/storage-core", "indexer/es_indexer"]

[workspace.dependencies]
serde = "1"
async-trait = "0.1.88"
anyhow = "1.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
tracing = "0.1"
serde_json = "1"
tokio = "1.45.0"
