[package]
name = "storix"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
nject = "0.4"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3"
tokio-stream = "0.1"
clap = { version = "4.5.38", features = ["derive", "env", "usage", "help", "wrap_help"] }
entry = { path = "../entries/entry" }
http_entry = { path = "../entries/http_entry" }
tcp_entry = { path = "../entries/tcp_entry" }