[package]
name = "http_entry"
version.workspace = true
edition.workspace = true

[dependencies]
entry = { path = "../entry" }
axum = { version = "0.8.4", features = ["default", "multipart", "json"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
#utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }